fix: ensure sufficient contrast in file upload button text

--- a/packages/components-css/button-css/src/html/_mixin.scss
+++ b/packages/components-css/button-css/src/html/_mixin.scss
@@ -17,6 +17,10 @@
     display: none;
   }
 
+  input[type="file" i] {
+    @include mixin.nl-button--file;
+  }
+
   input[type="button" i]:where(:disabled),
   input[type="reset" i]:where(:disabled),
   input[type="submit" i]:where(:disabled),
